# pkg/docs/swagger.json
@@ -80,7 +80,7 @@
             }
         },
         "/users/add-role": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -103,7 +103,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/inputForms.AddUserRoleForm"
+                            "$ref": "#/definitions/inputForms.AddUserRoleInput"
                         }
                     }
                 ],
@@ -149,6 +149,53 @@
                         "schema": {
                             "$ref": "#/definitions/inputForms.DeleteUserRole"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/outputForms.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/outputForms.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/info": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получение данных о пользователе, запрос без параметров вернёт данные о текущем пользователе",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "UserId",
+                        "name": "id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -243,15 +290,18 @@
                 }
             }
         },
-        "inputForms.AddUserRoleForm": {
+        "inputForms.AddUserRoleInput": {
             "type": "object",
             "required": [
-                "role_id",
+                "roles",
                 "user_id"
             ],
             "properties": {
-                "role_id": {
-                    "type": "integer"
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "user_id": {
                     "type": "integer"
@@ -261,12 +311,12 @@
         "inputForms.DeleteUserRole": {
             "type": "object",
             "required": [
-                "role_id",
+                "role_name",
                 "user_id"
             ],
             "properties": {
-                "role_id": {
-                    "type": "integer"
+                "role_name": {
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "integer"
@@ -276,25 +326,25 @@
         "inputForms.SignUpUserForm": {
             "type": "object",
             "required": [
+                "email",
                 "first_name",
                 "password",
-                "phone",
                 "second_name"
             ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "first_name": {
                     "type": "string"
                 },
                 "password": {
                     "type": "string"
                 },
-                "phone": {
-                    "type": "string"
-                },
-                "roles_ids": {
+                "roles_names": {
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "type": "string"
                     }
                 },
                 "second_name": {
@@ -305,19 +355,7 @@
         "models.Role": {
             "type": "object",
             "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
-                },
                 "name": {
-                    "type": "string"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
